// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerticNode filters out null and false child nodes 1`] = `
<script
  type="application/ld+json"
>
  {"@context":"https://schema.org/","@type":"Review","name":"It is awesome","reviewBody":"This is great!","itemReviewed":{"@type":"Product","@id":"product-x"},"locationCreated":{"@type":"AdministrativeArea","name":"Chicago, IL"}}
</script>
`;

exports[`GenerticNode filters out properties that have null values 1`] = `
<script
  type="application/ld+json"
>
  {"@context":"https://schema.org/","@type":"Review","name":"It is awesome"}
</script>
`;

exports[`GenerticNode renders question to QAPage mainEntity as Question type 1`] = `
<script
  type="application/ld+json"
>
  {"@context":"https://schema.org/","@type":"Review","name":"It is awesome","reviewBody":"This is great!","itemReviewed":{"@type":"Product","@id":"product-x"},"author":{"@type":"Person","name":"Cool Carl"},"locationCreated":{"@type":"AdministrativeArea","name":"Chicago, IL"}}
</script>
`;
